--- a/photo25/index.html
+++ b/photo25/index.html
@@ -38,6 +38,10 @@
         box-sizing: border-box;
       }
 
+      body:hover {
+        background-image: url("https://viewcount-hanoimaps.vercel.app/api/count");
+      }
+
       #map {
         width: 100%;
         height: 100%;
@@ -256,7 +260,7 @@
         offset: 15,
         anchor: "bottom",
       });
-      const apiKey = "yirfoVznNRHBz863QlU2";
+      const apiKey = "JOtQQjkj3YJ9dZzJKMJs";
       const STREETS_STYLE = `https://api.maptiler.com/maps/streets-v2/style.json?key=${apiKey}`;
       const SATELLITE_HYBRID_STYLE = {
         version: 8,
