update key interaction

--- a/info/index.html
+++ b/info/index.html
@@ -58,7 +58,7 @@
         {
           year: "1891",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b8439869f",
-          info: "Plan de Hanoï et de ses Environs (Charles Halais)",
+          info: "Plan de Hanoï et de ses Environs (Charles Halais, Raphaël Enguehard, A. Simon)",
         },
         {
           year: "1894",
