--- a/info/index.html
+++ b/info/index.html
@@ -111,9 +111,14 @@
           info: "Plan de la ville d’Hanoi (Guides Madrolle)",
         },
         {
-          year: "1936",
+          year: "1936.1",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b53066945f/",
           info: "Plan de la ville de Hanoï (Bibliothèque nationale de France)",
+        },
+        {
+          year: "1936.2",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b53066855g/",
+          info: "Plan de la ville de Hanoï (Service géographique de l’Indochine)",
         },
         {
           year: "1942",
