--- a/info/index.html
+++ b/info/index.html
@@ -61,6 +61,11 @@
           info: "Plan de Hanoï et de ses Environs (Charles Halais, Raphaël Enguehard, A. Simon)",
         },
         {
+          year: "1893",
+          link: "https://humazur.univ-cotedazur.fr/s/mai68anice/item/1649#?c=&m=&s=&cv=&xywh=-3851%2C0%2C15906%2C11194",
+          info: "Environs de Hanoï (Bureau topographique des troupes de l'Indochine)",
+        },
+        {
           year: "1894",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b53147353p",
           info: "Plan de la ville de Hanoï (Bureau topographique des troupes de l'Indo-Chine)",
