--- a/info/index.html
+++ b/info/index.html
@@ -81,6 +81,11 @@
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
         },
         {
+          year: "1915",
+          link: "https://www.hanoilavie.com/index.php?lang=vi[/url][/B]&action=voir_photo&rep=Plans&photo=1915%20-%20Atlas%20Colonial.jpg",
+          info: "Carte des Environs de Hanoï (?)",
+        },
+        {
           year: "1920",
           link: "https://gallica.bnf.fr/ark:/12148/bpt6k11001779/f137.item",
           info: "Plan de Hanoï (Service géographique de l'Indo-Chine)",
