--- a/info/index.html
+++ b/info/index.html
@@ -66,9 +66,14 @@
           info: "Environs de Hanoï (Bureau topographique des troupes de l'Indochine)",
         },
         {
-          year: "1894",
+          year: "1894.1",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b53147353p",
           info: "Plan de la ville de Hanoï (Bureau topographique des troupes de l'Indo-Chine)",
+        },
+        {
+          year: "1894.2",
+          link: "https://recherche-anom.culture.gouv.fr/ark:/61561/83772.3801823/daogrp/0/1?id=https%3A%2F%2Frecherche-anom.culture.gouv.fr%2Fark%3A%2F61561%2F83772.3801823%2Fcanvas%2F0%2F1",
+          info: "Place de Hanoï. Plan d’ensemble de la citadelle (Gouvernement général de l'Indochine)",
         },
         {
           year: "1902",
