--- a/info/index.html
+++ b/info/index.html
@@ -46,6 +46,11 @@
           info: "Plan dessiné par Pham-Dinh-Bach (Service géographique de l'Indo-Chine)",
         },
         {
+          year: "1883",
+          link: "https://recherche-anom.culture.gouv.fr/ark:/61561/81646.3799898/daogrp/0/1?id=https%3A%2F%2Frecherche-anom.culture.gouv.fr%2Fark%3A%2F61561%2F81646.3799898%2Fcanvas%2F0%2F1",
+          info: "Amplification d’un levé de Hanoï (Colonne Expéditionnaire du Tonkin)",
+        },
+        {
           year: "1885",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b550132625",
           info: "Plan de la Ville de Hanoï en 1885 (Imprimerie photo-lithographique du Cadastre du Tonkin)",
