--- a/info/index.html
+++ b/info/index.html
@@ -116,6 +116,11 @@
           info: "L'Indochine d'hier et d'aujourd'hui (Cucherousset)",
         },
         {
+          year: "1928",
+          link: "https://catalogue.nla.gov.au/catalog/1634698",
+          info: "Environs de Hanoï (Service géographique de l'Indo-Chine)",
+        },
+        {
           year: "1929",
           link: "https://catalogue.bnf.fr/ark:/12148/cb406928273",
           info: "Plan de la ville de Hanoï (Service géographique de l’Indochine)",
