--- a/info/index.html
+++ b/info/index.html
@@ -81,6 +81,11 @@
           info: "Place de Hanoï. Plan d’ensemble de la citadelle (Gouvernement général de l'Indochine)",
         },
         {
+          year: "1898",
+          link: "https://recherche-anom.culture.gouv.fr/ark:/61561/83413.3801535/daogrp/0/1?id=https%3A%2F%2Frecherche-anom.culture.gouv.fr%2Fark%3A%2F61561%2F83413.3801535%2Fcanvas%2F0%2F1",
+          info: "Plan de la ville de Hanoï (Bureau topographique des troupes de l’Indochine)",
+        },
+        {
           year: "1902",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b10106810f.r=saigon?rk=364808%3B4",
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
