--- a/info/index.html
+++ b/info/index.html
@@ -56,6 +56,11 @@
           info: "Plan de la Ville de Hanoï en 1885 (Imprimerie photo-lithographique du Cadastre du Tonkin)",
         },
         {
+          year: "1888",
+          link: "https://recherche-anom.culture.gouv.fr/ark:/61561/83768.3801819/daogrp/0/1?id=https%3A%2F%2Frecherche-anom.culture.gouv.fr%2Fark%3A%2F61561%2F83768.3801819%2Fcanvas%2F0%2F1",
+          info: "Carte topographique de Hanoï (Etat-major des troupes du groupe de l'Indochine)",
+        },
+        {
           year: "1890",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b53195606z",
           info: "Plan de la ville de Hanoï (M. V. Leclanger, L'Éveil économique de l'Indochine)",
