--- a/info/index.html
+++ b/info/index.html
@@ -146,9 +146,14 @@
           info: "Ville de Hanoi (Bureau du Tourisme en Indochine)",
         },
         {
-          year: "1932",
+          year: "1932.1",
           link: "http://belleindochine.free.fr/images/Plan/1000PlanHanoi1932Madrolle.jpg",
           info: "Plan de la ville d’Hanoi (Guides Madrolle)",
+        },
+        {
+          year: "1932.2",
+          link: "",
+          info: "Plan de la ville de Hanoï (Bibliothèque nationale de France)",
         },
         {
           year: "1936.1",
