--- a/info/index.html
+++ b/info/index.html
@@ -156,6 +156,11 @@
           info: "Plan de la ville de Hanoï (Bibliothèque nationale de France)",
         },
         {
+          year: "1935",
+          link: "https://commons.wikimedia.org/wiki/File:Hano%C3%AF_Echelle_1_50_000e_Dress%C3%A9.jpg",
+          info: "Environs de Hanoï (Service géographique de l’Indochine)",
+        },
+        {
           year: "1936.1",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b53066945f/",
           info: "Plan de la ville de Hanoï (Bibliothèque nationale de France)",
