--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
@@ -25,8 +25,45 @@
   </head>
   <body>
     <div id="map"></div>
-    <div class="layer-switcher">
-      <select id="layer-select"></select>
+    <div
+      style="
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        z-index: 1000;
+      "
+    >
+      <button id="street-view-btn" title="Toggle Street View">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="style-switcher-icon"
+        >
+          <path
+            d="M4 3h16a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-5l-3 3-3-3H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z"
+            stroke-linecap="round"
+          />
+
+          <rect x="7" y="7" width="10" height="2" fill="black" stroke="none" />
+          <rect x="7" y="11" width="6" height="2" fill="black" stroke="none" />
+        </svg>
+      </button>
+      <div
+        class="layer-switcher"
+        style="position: relative; top: auto; right: auto"
+      >
+        <select id="layer-select"></select>
+      </div>
     </div>
     <div id="opacity-slider-wrapper">
       <input
